# openai-ads-mcp

./: .dockerignore  .gitignore  Dockerfile  HOSTED_DEPLOY.md  LICENSE  README.md  RELEASING.md  cloudflare-worker.js  glama.json  mcpToolManifest.json  openapi.json  server.json  wrangler.toml
.github/workflows/: check-openapi.yml  publish-mcp-registry.yml  publish-npm.yml  publish-python.yml
python/: README.md  pyproject.toml
python/src/openai_ads_mcp/: __init__.py  __main__.py  _core.py  client.py  helpers.py  tools_account.py  tools_adgroups.py  tools_ads.py  tools_audiences.py  tools_campaigns.py  tools_conversions.py  tools_insights.py
python/tests/: test_server.py
scripts/: deploy-hosted-cloud-run.sh
typescript/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
typescript/scripts/: check-openapi-drift.mjs
typescript/src/: client.ts  core.ts  helpers.ts  hosted.ts  http.ts  index.ts  resource_trakkr.ts
typescript/src/tools/: account.ts  adgroups.ts  ads.ts  audiences.ts  campaigns.ts  conversions.ts  insights.ts
typescript/test/: server.test.mjs
