[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-ads-mcp"
version = "0.1.1"
description = "Typed MCP server for OpenAI's Advertiser API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Trakkr", email = "hello@trakkr.ai" }]
keywords = ["mcp", "openai", "ads", "advertising", "trakkr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.26,<2",
    "httpx>=0.27",
    "anyio>=4",
]

[project.scripts]
openai-ads-mcp = "openai_ads_mcp:main"

[project.urls]
Homepage = "https://trakkr.ai"
Repository = "https://github.com/trakkr-aisearch/openai-ads-mcp"
Issues = "https://github.com/trakkr-aisearch/openai-ads-mcp/issues"

[tool.hatch.build.targets.sdist]
include = ["src/openai_ads_mcp", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/openai_ads_mcp"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
